# MATH3310_FA_2025_P02_G02_PICKETT_CARDONA

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: project2.ipynb
