[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MP2_ImbalancedClassification"
version = "0.0.1"
description = "Project 2"
authors = [
  { name = "Brenna" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.1.0"


[tool.ruff]
line-length = 99
src = ["MP2_ImbalancedClassification"]
include = ["pyproject.toml", "MP2_ImbalancedClassification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["MP2_ImbalancedClassification"]
force-sort-within-sections = true

